# Intent-Based-Industrial-Automation

./: .gitattributes  .gitignore  README.md  changes_log_20251227_183909.json  extract_ground_truth.py  fix_scenarios.py
ReActXen/src/reactxen/demo/intent_implementation_demo/: .gitignore  README.md  README_AGENT_HF.md  README_HIERARCHICAL.md  README_REORGANIZATION.md  RUN_VALIDATION_SUMMARY.txt  agent_implementation.py  agent_output_full.txt  agent_tool_wrapper.py  agents.md  benchmark_utils.py  cost_benefit_agent.py  credentials.json.template  data_scientist_agent.py  dataset_tools.py  dynamic_agent_system.py  export_scenarios.py  ground_truth_verification.py  hierarchical_agents.py  load_data.py  main.py  main_hierarchical.py  ml_data_prep.py  ml_framework_tools.py  ml_models_state.py  ml_prediction_tools.py  monitor_agent.py  monitor_output.sh  multi_agent_output_full.txt  predictive_maintenance_agent.py  pyproject.toml  pytorch_tools.py  reorganize.py  root_agent_implementation.py  run_agent_test.py  run_agent_with_capture.sh  safety_policy_agent.py  shared_utils.py  sklearn_tools.py  sub_agent_base.py  (+5 more)
ReActXen/src/reactxen/demo/intent_implementation_demo/IBM Research Paper Catalogue Reference/: Notes_and_Comprehension_Research_Paper_Consolidated.rtf
ReActXen/src/reactxen/demo/intent_implementation_demo/assetopsbench_integration/: __init__.py  phmforge_handler.py  run_track_phm.py
ReActXen/src/reactxen/demo/intent_implementation_demo/frontend/: app.py  tools_inventory.json
ReActXen/src/reactxen/demo/intent_implementation_demo/mcp_servers/: __init__.py  context_manager.py  maintenance_server.py  mcp_client.py  mcp_eval.py  prognostics_server.py  registry.py  streaming.py  verify_servers.py
ReActXen/src/reactxen/demo/intent_implementation_demo/multi_agent_implementation/: __init__.py  benchmark_runner.py  run.py
ReActXen/src/reactxen/demo/intent_implementation_demo/multi_agent_implementation_demo/: COMPILE_INSTRUCTIONS.txt  README.md  __init__.py  agent_tool_wrapper.py  appendix_acronyms.tex  appendix_tools.tex  architecture_visualizer.py  common_tools.py  comprehensive_evaluator.py  data.py  dataset_tools.py  datasets_scenarios.py  dynamic_agent_system.py  enhanced_heuristics.py  fast_optimized_agent.py  final_agent_output.txt  generate_appendix_tables.py  generate_architecture_diagram.py  generate_donut.py  generate_funnel.py  generate_performance_diagrams.py  generate_performance_figure.py  ground_truth_verification.py  kdd_style_research_paper.tex  kdd_style_research_paper_backup.tex  learning_agent.py  main_hierarchical.py  memory_system.py  metadata_system.py  model_selector.py  multi_agent_output_full.txt  multi_llm_benchmark.py  optimized_agent_system.py  optimized_pdmbench_agent.py  paper_sections_structure.json  pdmbench_agent.py  pdmbench_benchmark.py  performance_optimizer.py  reference_kdd.bib  reflector_agent.py  (+15 more)
ReActXen/src/reactxen/demo/intent_implementation_demo/results/: ablation_results.json  (+3 more)
(+114 files in other folders)
