[project]
name = "intent-implementation-demo"
version = "0.1.0"
description = "PHMForge — MCP-based Predictive Maintenance Benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.4.1",
    "ddgs>=9.9.0",
    "fastmcp>=2.14.5",
    "haversine>=2.9.0",
    "huggingface-hub>=0.36.0",
    "ibm-watsonx-ai>=1.3.42",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-ibm>=1.0.0",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.26.0",
    "numpy>=2.2.6",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "mdextractor>=2025.4.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "xgboost>=3.1.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
search = [
    "langchain-community>=0.4.1",
]

[project.scripts]
prognostics-mcp-server = "mcp_servers.prognostics_server:main"
maintenance-mcp-server = "mcp_servers.maintenance_server:main"
